# VkLisa

./: .gitignore  CMakeLists.txt
include/: BufferTools.h  Comp.h  Ctx.h  Evolve.h  General.h  Grader.h  GridRender.h  ImageTools.h  Lottery.h  Primitives.h  QuadRender.h  Rast.h  RenderPass.h  Types.h  precomp.h
shaders/: common.glsl  evolve.comp  grader.comp  grid.vert  lottery.comp  quad.frag  quad.vert  reduce.comp
shaders_bin/: evolve.comp.spv  grader.comp.spv  grid.frag.spv  grid.vert.spv  lottery.comp.spv  quad.frag.spv  quad.vert.spv  reduce.comp.spv
src/: BufferTools.cpp  Comp.cpp  Ctx.cpp  Evolve.cpp  General.cpp  Grader.cpp  GridRender.cpp  ImageTools.cpp  Lottery.cpp  QuadRender.cpp  Rast.cpp  RenderPass.cpp  main.cpp  precomp.cpp
